# Agent_Dev_Project

./: .env  .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/agent/: agent.py
app/core/: config.py  logger.py
app/exceptions/: custom_exceptions.py  handlers.py
app/schemas/: ask.py
app/services/: calculator_service.py  rag_service.py  weather_service.py
app/tools/: __init__.py  calculator_tool.py  rag_tool.py  weather_tool.py
